@@ -6,6 +6,10 @@ repositories {
   maven("https://oss.sonatype.org/content/repositories/snapshots")
 }
 
+tasks.withType<JavaCompile>().configureEach {
+  options.compilerArgs.add("--enable-preview")
+}
+
 dependencies {
   implementation(libs.kotlin.gradle)
   implementation(libs.spotless.gradle)
